# syntask

./: .codespellrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE-NOTES.md  SECURITY.md  docker-compose.yml  memo_store.toml  mkdocs.insiders.yml  mkdocs.yml  netlify.toml  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  1_general_bug_report.yaml  2_feature_enhancement.yaml  2_ui_bug_report.yaml  3_feature_enhancement.yaml  4_docs_change.yaml  5_maintenance_ticket.yaml  config.yml
.github/workflows/: api-compatibility-tests.yaml  benchmarks.yaml  build-docs.yaml  codspeed-benchmarks.yaml  docker-images.yaml  helm-chart-release.yaml  integration-package-release.yaml  integration-package-tests.yaml  integration-tests.yaml  issue-bot.yaml  markdown-tests.yaml  npm_update_latest_syntask.yaml  python-package.yaml  python-tests.yaml  smokeshow.yml  syntask-client-publish.yaml  syntask-client.yaml  test-redistribute.yml  test.yml  validate_worker_metadata.yaml
benches/: bench_cli.py  bench_flows.py  bench_import.py  bench_tasks.py  conftest.py
client/: INFO.md  README.md  build_client.sh  client_flow.py  setup.py
docs/: conftest.py  faq.md  index.md  mint.json  script.js
docs/api-ref/: index.md  rest-api-reference.md
docs/cloud/: connecting.md  events.md  incidents.md  index.md  rate-limits.md  workspaces.md
docs/community/: index.md
docs/concepts/: agents.md  artifacts.md  automations.md  blocks.md  deployments-block-based.md  deployments.md  filesystems.md  flows.md  index.md  infrastructure.md  results.md  schedules.md  states.md  storage.md  task-runners.md  tasks.md  work-pools.md
docs/contribute/: code-of-conduct.mdx  contribute-integrations.mdx  dev-contribute.mdx  develop-a-new-worker-type.mdx  docs-contribute.mdx  index.mdx  styles-practices.mdx
docs/contributing/: overview.md  style.md  testing-flow-runners.md.old  versioning.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: automations.md  big-data.md  ci-cd.md  (+22 more)
flows/: agent.py  automation-assessments.py  client_context_lifespan.py  concurrent_subflows.py  deploy.py  deployment_apply.py  deployment_run.py  deployment_storage.py  flow_pauses.py  flow_results.py  flow_retries.py  flow_retries_with_subflows.py  hello_tasks.py  hello_world.py  secret_block.py  task_results.py  task_retries.py  worker.py
requirements/: requirements-dev.txt  requirements-markdown-tests.txt  requirements-tests.txt  requirements.txt
scripts/: build-all-dev-images  collections-manager  entrypoint.sh  events-coverage  format.sh  generate-lower-bounds.py  generate-release-notes.py  generate_integration_package_tests_matrix.py  generate_mintlify_openapi_docs.py  generate_oss_openapi_schema.py  generate_sdk_docs.py  label_approved.py  lint.sh  run-compatibility-tests  run-integration-flows.py  serve_docs  surface_high_engagement_issues.py  test-collection-with-postgres  test-cov-html.sh  test-with-postgres  validate_collection_view_content.py  wait-for-server.py
src/integrations/syntask-databricks/: README.md  pyproject.toml
src/integrations/syntask-databricks/syntask_databricks/: credentials.py  flows.py  jobs.py  rest.py
src/integrations/syntask-databricks/tests/: test_block_standards.py  test_credentials.py  test_flows.py  test_generate.py  test_jobs.py  test_rest.py  test_version.py
src/integrations/syntask-gcp/: README.md  pyproject.toml
src/integrations/syntask-gcp/syntask_gcp/: __init__.py  bigquery.py  cloud_storage.py  credentials.py  secret_manager.py  utilities.py
src/integrations/syntask-gcp/syntask_gcp/deployments/: steps.py
src/integrations/syntask-gcp/syntask_gcp/workers/: cloud_run.py  cloud_run_v2.py  vertex.py
src/integrations/syntask-gcp/tests/: conftest.py  test_bigquery.py  test_block_standards.py  test_cloud_run_v2.py  test_cloud_run_worker.py  test_cloud_run_worker_v2.py  test_cloud_storage.py  test_credentials.py  test_secret_manager.py  test_utilities.py  test_version.py  test_vertex_worker.py
src/integrations/syntask-gcp/tests/projects/: test_steps.py
src/integrations/syntask-redis/: MANIFEST.in  README.md  pyproject.toml
src/integrations/syntask-redis/syntask_redis/: blocks.py  locking.py  tasks.py
src/integrations/syntask-redis/tests/: conftest.py  test_blocks.py  test_locking.py  test_tasks.py
src/integrations/syntask-shell/: README.md  pyproject.toml
src/integrations/syntask-shell/syntask_shell/: commands.py
src/integrations/syntask-shell/tests/: conftest.py  test_block_standards.py  test_commands.py  test_commands_windows.py  test_version.py
src/integrations/syntask-snowflake/: README.md  pyproject.toml
src/integrations/syntask-snowflake/syntask_snowflake/: __init__.py  credentials.py  database.py
src/integrations/syntask-snowflake/tests/: conftest.py  test_block_standards.py  test_credentials.py  test_database.py  test_version.py
src/integrations/syntask-sqlalchemy/: README.md  pyproject.toml
src/integrations/syntask-sqlalchemy/syntask_sqlalchemy/: database.py
src/integrations/syntask-sqlalchemy/tests/: conftest.py  test_block_standards.py  test_credentials.py  test_database.py  test_version.py
tests/: conftest.py  generic_tasks.py  test_artifacts.py  test_automations.py  test_background_tasks.py  test_cache_policies.py  test_context.py  test_deployments.py  test_engine.py  test_exceptions.py  test_filesystems.py  test_flow_engine.py  test_flow_runs.py  test_flows.py  test_flows_compat.py  test_futures.py  test_highlighters.py  test_import_interceptor.py  test_locking.py  test_log_prints.py  test_logging.py  test_plugins.py  test_serializers.py  test_settings.py  test_states.py  test_task_engine.py  test_task_runners.py  test_task_runs.py  test_task_server.py  test_task_worker.py  test_tasks.py  test_transactions.py  test_variables.py
ui/: .eslintrc.js  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
(+1638 files in other folders)
