[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "syntask-redis"
description = "Syntask integrations with Redis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
keywords = ["syntask"]
authors = [{ name = "Syntask Technologies, Inc.", email = "help@khulnasoft.com" }]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["syntask>=3.0.0rc1", "redis>=5.0.1"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "coverage",
  "interrogate",
  "mkdocs-gen-files",
  "mkdocs-material",
  "mkdocs",
  "mkdocstrings[python]",
  "mypy",
  "pillow",
  "pre-commit",
  "pytest-asyncio",
  "pytest",
  "pytest-env",
  "pytest-timeout",
  "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/synopkg/syntask/tree/main/src/integrations/syntask-redis"

[project.entry-points."syntask.collections"]
syntask_redis = "syntask_redis"

[tool.setuptools_scm]
version_file = "syntask_redis/_version.py"
root = "../../.."
tag_regex = "^syntask-redis-(?P<version>\\d+\\.\\d+\\.\\d+(?:[a-zA-Z0-9]+(?:\\.[a-zA-Z0-9]+)*)?)$"
fallback_version = "0.2.0"
git_describe_command = 'git describe --dirty --tags --long --match "syntask-redis-*[0-9]*"'

[tool.interrogate]
ignore-init-module = true
ignore_init_method = true
exclude = ["syntask_redis/_version.py", "tests"]
fail-under = 95
omit-covered-files = true

[tool.coverage.run]
omit = ["tests/*", "syntask_redis/_version.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = "30"
env = [
  "SYNTASK_TEST_MODE=1",
]
