[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "syntask-snowflake"
dependencies = [
  "snowflake-connector-python>=2.7.6",
  "syntask>=3.0.0rc1",
]
dynamic = ["version"]
description = "Syntask integrations for interacting with Snowflake"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
keywords = ["syntask"]
authors = [{ name = "Syntask Technologies, Inc.", email = "help@khulnasoft.com" }]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "interrogate",
  "mkdocs-gen-files",
  "mkdocs-material",
  "mkdocs",
  "mkdocstrings[python]",
  "mypy",
  "pillow",
  "pre-commit",
  "pytest-asyncio",
  "pytest",
  "pytest-env",
  "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/synopkg/syntask/tree/main/src/integrations/syntask-snowflake"

[project.entry-points."syntask.collections"]
syntask_snowflake = "syntask_snowflake"

[tool.setuptools_scm]
version_file = "syntask_snowflake/_version.py"
root = "../../.."
tag_regex = "^syntask-snowflake-(?P<version>\\d+\\.\\d+\\.\\d+(?:[a-zA-Z0-9]+(?:\\.[a-zA-Z0-9]+)*)?)$"
fallback_version = "0.0.0"
git_describe_command = 'git describe --dirty --tags --long --match "syntask-snowflake-*[0-9]*"'

[tool.interrogate]
ignore-init-module = true
ignore_init_method = true
exclude = ["syntask_snowflake/_version.py", "tests"]
fail-under = 95
omit-covered-files = true

[tool.coverage.run]
omit = ["tests/*", "syntask_snowflake/_version.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
  "SYNTASK_TEST_MODE=1",
]
